# html-to-images

./: .gitignore
.github/: copilot-instructions.md
.github/instructions/: image-generation-pipeline.instructions.md  infra.instructions.md  task-management-service.instructions.md
image-generation-pipeline/: .env.example  .gitignore  index.ts  index.tsx  package.json  tsconfig.json
image-generation-pipeline/src/: index.tsx
image-generation-pipeline/src/fonts/: index.ts
image-generation-pipeline/src/gcp/: README.md  example.ts  storage.ts
image-generation-pipeline/src/katori/: index.ts
infra/: README.md  backend.tf  example.env  init-log.txt  init_env.sh  main.tf  outputs.tf  provider.tf  variables.tf
task-management-service/: .gitignore  alembic.ini  docker-compose.yml  example.env  package.json  pyproject.toml  server.ts
task-management-service/alembic/: env.py
task-management-service/alembic/versions/: 3c270c205046_create_task_table.py  749f4edbb97f_create_task_table2.py  ff2c013098bc_create_task_table3.py
task-management-service/app/: main.py  settings.py
task-management-service/app/db/: db.py
task-management-service/app/models/: status.py  task.py
task-management-service/app/services/: pubsub.py
task-management-service/src/: index.ts
task-management-service/src/api/: index.ts
task-management-service/src/api/auth/: auth.ts
task-management-service/src/api/tasks/: tasks.ts
task-management-service/src/gcp/: pubsub.ts
